# MyCluster

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  mycluster.sublime-project  mycluster.sublime-workspace  release-notes.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
conf/: test.conf
mycluster/: __init__.py  cli.py  exceptions.py  lsf.py  mycluster.py  pbs.py  persist.py  sge.py  slurm.py  test.py  version.py
mycluster/lsf/: __init__.py
mycluster/old/: lsf.py  mycluster.py  pbs.py  persist.py  sge.py  slurm.py  test.py
mycluster/persist/: __init__.py
mycluster/schedulers/: __init__.py  base.py  lsf.py  pbs.py  sge.py  slurm.py
mycluster/schedulers/templates/: lsf.jinja  pbs.jinja  sge.jinja  slurm.jinja
mycluster/sge/: __init__.py
mycluster/slurm/: __init__.py
mycluster/templates/: lsf.jinja  pbs.jinja  sge.jinja  slurm.jinja  slurm_pack.jinja
mycluster/version/: __init__.py
scripts/: create_virtualenv.bat  create_virtualenv.bsh  mycluster
share/: mycluster-OF-simpleFoam.bsh  mycluster-fluent.bsh  mycluster-paraview.bsh  mycluster-viz-paraview.bsh  mycluster-zcfd-fsi.bsh  mycluster-zcfd.bsh
version/: __init__.py
