[metadata]
name = mycluster
description = "Utilities to support interacting with multiple HPC clusters"
author = "Zenotech Ltd"
author_email = "support@zenotech.com"
Home-page = https://github.com/zenotech/MyCluster
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2>=2.10.1
    click
    pyfiglet

[options.entry_points]
console_scripts =
    mycluster = mycluster.cli:main

[options.data_files]
share/MyCluster = 
    share/mycluster-OF-simpleFoam.bsh
    share/mycluster-fluent.bsh
    share/mycluster-zcfd.bsh
    share/mycluster-paraview.bsh